hive-macro/tests/macro/should_fail/attribute_syntax.rs
#[hive_macro::hive_test(; = 1)]
fn test() {}

fn main() {}
